@@ -106,7 +106,7 @@
                         title: 'Assets',
                         default_href: 'list/assets/{{ project.id }}',
                         href: 'list/assets/{{ project.id }}',
-                        style: ' padding: 0; margin:0;'
+                        style: ' padding: 0; margin:0; height:100%;'
                     }, 'assets_content_pane');
                     project_related_data_tab_container.addChild(assets_content_pane);
                 {% endif %}
